# face-generator

./: .gitignore  Cargo.toml  README.md  build.bat  index.html  main.js
src/: color.rs  group.rs  lib.rs  slider.rs  value.rs
src/app/: mod.rs  slider.rs
src/parts/: eyes.rs  face.rs  mod.rs  mouth.rs  nose.rs
